# python_c_example

./: README.md
c_api_example/c_python_example/: 01.cpp  02.cpp  Makefile
c_api_example/python_c_example/: Makefile  fput.c  test.py
c_python_example/cmake_example/: Makefile  test.py
cppyy_example/: cppyy_0.py  cppyy_1.py
cppyy_example/class_example/: class_1.py  class_2.py
cppyy_example/func_example/: add.py
cppyy_example/harness_example_v1.0/: example.cpp
cppyy_example/harness_example_v1.2/: Makefile
cppyy_example/sysc_example/: test.py
cppyy_example/sysc_example/example_v0/top/: CMakeLists.txt  sc_main.cpp  top.h
cppyy_example/sysc_example/example_v0/utils/: CMakeLists.txt  clkgen.cpp  initiator.h  resetgen.cpp  resetgen.h  target.cpp
cppyy_example/sysc_example/example_v1/: Makefile  test.py  test2.py
cppyy_example/sysc_example/example_v1/utils/: Makefile  clkgen.cpp  clkgen.h  components.h  initiator.cpp  resetgen.cpp  resetgen.h  router.h  target.h  (+1 more)
cppyy_example/sysc_example/simple_example/: test.py
cppyy_example/verilator_example/: Makefile  example.cpp  test.py
ctypes_example/: Makefile
pybind11_example/: README.md
pybind11_example/c_python_example/cmake_example/: Makefile
pybind11_example/c_python_example/func_example/: Makefile
pybind11_example/c_python_example/simple_example/: Makefile  main.cpp
pybind11_example/python_c_example/add_example/: example.cpp
pybind11_example/python_c_example/func_example/: Makefile
pybind11_example/python_c_example/struct_example/: Makefile
python_c_example/cmake_example/: test.py
(+2 files in other folders)
